--- a/presidio-analyzer/conf/stanza_multilingual.yaml
+++ b/presidio-analyzer/conf/stanza_multilingual.yaml
@@ -4,6 +4,15 @@ models:
     lang_code: en
     model_name: en
   -
+    lang_code: es
+    model_name: es
+  -
     lang_code: de
     model_name: de
+  -
+    lang_code: ja
+    model_name: ja
+  -
+    lang_code: zh
+    model_name: zh
 
